--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <h1 class="text-center">Main page</h1>
         <form class="row g-3">
           <div class="col-md-6">
-            <label for="name" class="form-label">Mashina nomi</label>
+            <label for="Inputname" class="form-label">Mashina nomi</label>
             <input
               type="text"
               class="form-control"
-              id="name"
+              id="Inputname"
               placeholder="Enter name" />
           </div>
           <div class="col-md-6">
-            <label for="category" class="form-label">Mashina turi</label>
-            <select id="inputState" class="form-select">
+            <label for="inputCategory" class="form-label">Mashina turi</label>
+            <select id="inputCategory" class="form-select">
               <option selected>Choose category</option>
               <option value="Mersades">Mersades</option>
               <option value="Daewoo">Daewoo</option>
@@ -35,21 +35,21 @@
             </select>
           </div>
           <div class="col-6">
-            <label for="narx" class="form-label">Narxini kiriting</label>
+            <label for="inputNarx" class="form-label">Narxini kiriting</label>
             <input
               type="text"
               class="form-control"
-              id="narx"
+              id="inputNarx"
               placeholder="narxini kiriting" />
           </div>
           <div class="col-6">
-            <label for="rasm" class="form-label"
+            <label for="img" class="form-label"
               >Mashina suratini url manzilini yuboring</label
             >
             <input
               type="text"
               class="form-control"
-              id="rasm"
+              id="img"
               placeholder="https://...." />
           </div>
           <div class="col-md-6">
@@ -57,10 +57,10 @@
             <input type="month" class="form-control" id="sana" placeholder="" />
           </div>
           <div class="col-md-6">
-            <label for="inputCategory" class="form-label"
+            <label for="color" class="form-label"
               >Mashina rangini tanlang</label
             >
-            <select id="inputCategory" class="form-select">
+            <select id="color" class="form-select">
               <option selected>Choose color</option>
               <option value="Mersades">Black</option>
               <option value="Daewoo">White</option>
@@ -70,11 +70,11 @@
             </select>
           </div>
           <div class="col-12">
-            <label for="textarea">Tasnif</label>
+            <label for="tasnif">Tasnif</label>
             <textarea
               class="form-control"
               placeholder="Leave a comment here"
-              id="textarea"></textarea>
+              id="tasnif"></textarea>
           </div>
           <div class="col-12">
             <button
@@ -86,7 +86,7 @@
           </div>
         </form>
       </div>
-      <div class="main-data">
+      <div class="main-data" id="mainScren">
         <div class="border row mt-5 p-4">
           <div class="col-3">
             <img
@@ -119,7 +119,7 @@
           </div>
         </div>
       </div>
-      <div class="main-data">
+      <div class="main-data" id="mainScren">
         <div class="border row mt-5 p-4">
           <div class="col-3">
             <img
