Homework is almost done!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Main page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <div class="container p-4">
       <div class="form-section bg-secondary mt-2 p-4">
         <h1 class="text-center">Main page</h1>
-        <form class="row g-3">
+        <form class="row g-3" id="form">
           <div class="col-md-6">
             <label for="Inputname" class="form-label">Mashina nomi</label>
             <input
@@ -62,11 +62,11 @@
             >
             <select id="color" class="form-select">
               <option selected>Choose color</option>
-              <option value="Mersades">Black</option>
-              <option value="Daewoo">White</option>
-              <option value="Chevrolet">Bleu</option>
-              <option value="Toyota">Red</option>
-              <option value="Hyundai">Yellow</option>
+              <option value="Black">Black</option>
+              <option value="White">White</option>
+              <option value="Bleu">Bleu</option>
+              <option value="Red">Red</option>
+              <option value="Yellow">Yellow</option>
             </select>
           </div>
           <div class="col-12">
@@ -87,70 +87,7 @@
         </form>
       </div>
       <div class="main-data" id="mainScren">
-        <div class="border row mt-5 p-4">
-          <div class="col-3">
-            <img
-              width="200"
-              height="150"
-              src="https://picsum.photos/seed/picsum/200/200"
-              alt="" />
-          </div>
-          <div class="col-9">
-            <div class="title d-flex justify-content-between">
-              <h1>Gentra</h1>
-              <button class="btn btn-primary">Batafsil</button>
-            </div>
-            <div class="intro">
-              <div class="row">
-                <div class="col-6">
-                  <h3>Daewoo</h3>
-                  <h4>14000</h4>
-                </div>
-                <div class="col-6">
-                  <h4>2021</h4>
-                  <h4>Qora</h4>
-                </div>
-              </div>
-
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit magnam optio placeat iure distinctio similique.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="main-data" id="mainScren">
-        <div class="border row mt-5 p-4">
-          <div class="col-3">
-            <img
-              width="200"
-              height="150"
-              src="https://picsum.photos/seed/picsum/200/200"
-              alt="" />
-          </div>
-          <div class="col-9">
-            <div class="title d-flex justify-content-between">
-              <h1>Gentra</h1>
-              <button class="btn btn-primary">Batafsil</button>
-            </div>
-            <div class="intro">
-              <div class="row">
-                <div class="col-6">
-                  <h3>Daewoo</h3>
-                  <h4>14000</h4>
-                </div>
-                <div class="col-6">
-                  <h4>2021</h4>
-                  <h4>Qora</h4>
-                </div>
-              </div>
-
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit magnam optio placeat iure distinctio similique.
-              </p>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </div>
   </body>
