--- a/abaout/about.html
+++ b/abaout/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <div class="container p-4">
       <h1 class="text-center">About page</h1>
       <div class="main-data">
-        <div class="border row mt-5 p-4">
+        <div class="border row mt-5 p-4" id="mainScren">
           <div class="col-6">
             <img
               width="500"
