--- a/about/about.html
+++ b/about/about.html
@@ -20,30 +20,33 @@
               width="500"
               height="400"
               src="https://picsum.photos/seed/picsum/200/200"
-              alt="" />
+              alt="" id="img"/>
           </div>
           <div class="col-6">
             <div class="title d-flex justify-content-between">
-              <h1>Gentra</h1>
+              <h1 id="name">Gentra</h1>
             </div>
             <div class="intro">
               <div class="row">
                 <div class="col-6">
-                  <h3>Daewoo</h3>
-                  <h4>14000$</h4>
+                  <h3 id="type">Daewoo</h3>
+                  <h4 id="narx">14000$</h4>
                 </div>
                 <div class="col-4">
-                  <h4>2021</h4>
-                  <h4>Qora</h4>
+                  <h4 id="sana">2021</h4>
+                  <h4 id="color">Qora</h4>
                 </div>
               </div>
               
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit magnam optio placeat iure distinctio similique.
-              </p>
+             <div class="d-flex justify-content-between">
+               <p id="tasnif">
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit magnam optio placeat iure distinctio similique.
+                </p>
+                <span id="status" class="btn btn-success"></span>
+             </div>
             </div>
-            <button class="btn btn-primary">Update</button>
-            <button class="btn btn-danger">Delete</button>
+            <button class="btn btn-primary " id="update">Update</button>
+            <button class="btn btn-danger" id="delete">Delete</button>
           </div>
         </div>
       </div>
@@ -53,5 +56,5 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-  <script src="../js/about.js"></script>
+  <script src="../js/about.js"type="module"></script>
 </html>
